<resources>
    <string name="app_name">GigaDocs</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="next">Next</string>
    <string name="speciality">Speciality</string>
    <string name="specialisation">Specialisation</string>

    <string name="title_activity_registration_details">RegistrationDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Address">Address</string>
    <string name="iattendpatient">I Attend Patient</string>
    <string name="myhospitallogo">My Hospital Logo</string>
    <string name="logo">GigaDocsLogo</string>
    <string name="i_work_in_two_shift">I work in Two Shifts</string>
    <string name="i_work_from">I work from</string>
    <string name="i_work_to">I work to</string>
    <string name="signup">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_name">Patient Name</string>
    <string name="Date">Date</string>
    <string name="appointment_slot">Appointment Slot</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="set_time">Set Time</string>

    <string name="cancel">Cancel</string>
    <string name="viewdata">ViewData</string>


    <string name="enter_monile_no_to_search">Enter Monile No to Search</string>
    <string name="search_hint">Enter Mobile Number</string>
    <string name="reset_data">Reset Data</string>
    <string name="view_data">View Data</string>
    <string name="sync_data">Sync Data</string>
    <string name="existing_patient_mobile">Existing Patient Mobile</string>
    <string name="appointment_id">Enter Appointment Id</string>
    <string name="select_date">Select Date</string>
    <string name="internet_failure">Internet Failure</string>
    <string name="retry">Retry</string>
    <string name="please_turn_on_your_internet_connection_and_try_again">PLEASE TURN ON YOUR INTERNET CONNECTION AND TRY AGAIN</string>

</resources>
